docs/0.18.2/_sources/api/gammapy.modeling.models.DiskSpatialModel.rst.txt
DiskSpatialModel
================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: DiskSpatialModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~DiskSpatialModel.covariance
      ~DiskSpatialModel.default_parameters
      ~DiskSpatialModel.e
      ~DiskSpatialModel.edge
      ~DiskSpatialModel.evaluation_radius
      ~DiskSpatialModel.is_energy_dependent
      ~DiskSpatialModel.lat_0
      ~DiskSpatialModel.lon_0
      ~DiskSpatialModel.parameters
      ~DiskSpatialModel.phi
      ~DiskSpatialModel.phi_0
      ~DiskSpatialModel.position
      ~DiskSpatialModel.position_error
      ~DiskSpatialModel.r_0
      ~DiskSpatialModel.tag
      ~DiskSpatialModel.type

   .. rubric:: Methods Summary

   .. autosummary::

      ~DiskSpatialModel.__call__
      ~DiskSpatialModel.copy
      ~DiskSpatialModel.create
      ~DiskSpatialModel.evaluate
      ~DiskSpatialModel.evaluate_geom
      ~DiskSpatialModel.from_dict
      ~DiskSpatialModel.from_parameters
      ~DiskSpatialModel.integrate_geom
      ~DiskSpatialModel.plot
      ~DiskSpatialModel.plot_error
      ~DiskSpatialModel.plot_grid
      ~DiskSpatialModel.plot_interative
      ~DiskSpatialModel.to_dict
      ~DiskSpatialModel.to_region

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: e
   .. autoattribute:: edge
   .. autoattribute:: evaluation_radius
   .. autoattribute:: is_energy_dependent
   .. autoattribute:: lat_0
   .. autoattribute:: lon_0
   .. autoattribute:: parameters
   .. autoattribute:: phi
   .. autoattribute:: phi_0
   .. autoattribute:: position
   .. autoattribute:: position_error
   .. autoattribute:: r_0
   .. autoattribute:: tag
   .. autoattribute:: type

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: evaluate
   .. automethod:: evaluate_geom
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integrate_geom
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: plot_grid
   .. automethod:: plot_interative
   .. automethod:: to_dict
   .. automethod:: to_region
